--- a/controllers/controller-test/pom.xml
+++ b/controllers/controller-test/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>controller-test</artifactId>
+    <name>Controller :: Test</name>
     <dependencies>
         <dependency>
             <groupId>org.apache.camel</groupId>
