--- a/camel-load-tester-common/pom.xml
+++ b/camel-load-tester-common/pom.xml
@@ -3,13 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>kafka-tester-parent</artifactId>
+        <artifactId>camel-load-tester</artifactId>
         <groupId>org.apache.camel</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>kafka-tester-common</artifactId>
+    <artifactId>camel-load-tester-common</artifactId>
+    <name>Camel Load Tester :: Common</name>
 
     <dependencies>
         <dependency>
@@ -19,7 +20,7 @@
 
         <dependency>
             <groupId>org.apache.camel</groupId>
-            <artifactId>kafka-tester-io</artifactId>
+            <artifactId>camel-load-tester-io</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
