--- a/camel-load-tester-io/pom.xml
+++ b/camel-load-tester-io/pom.xml
@@ -3,14 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>kafka-tester-parent</artifactId>
+        <artifactId>camel-load-tester</artifactId>
         <groupId>org.apache.camel</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>kafka-tester-io</artifactId>
-    <name>Kafka Tester I/O</name>
+    <artifactId>camel-load-tester-io</artifactId>
+    <name>Camel Load Tester :: I/O</name>
 
     <dependencies>
         <dependency>
