--- a/camel-load-testers/camel-load-tester-producer/pom.xml
+++ b/camel-load-testers/camel-load-tester-producer/pom.xml
@@ -3,13 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>kafka-testers</artifactId>
+        <artifactId>camel-load-testers</artifactId>
         <groupId>org.apache.camel</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>kafka-tester-producer</artifactId>
+    <artifactId>camel-load-tester-producer</artifactId>
+    <name>Camel Load Tester :: Producer</name>
 
     <build>
         <plugins>
