--- a/camel-load-testers/pom.xml
+++ b/camel-load-testers/pom.xml
@@ -3,13 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>kafka-tester-parent</artifactId>
+        <artifactId>camel-load-tester</artifactId>
         <groupId>org.apache.camel</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>kafka-testers</artifactId>
+    <artifactId>camel-load-testers</artifactId>
+    <name>Camel Load Tester :: Testers</name>
     <packaging>pom</packaging>
 
     <properties>
@@ -56,21 +57,21 @@
 
         <dependency>
             <groupId>org.apache.camel</groupId>
-            <artifactId>kafka-tester-io</artifactId>
+            <artifactId>camel-load-tester-io</artifactId>
             <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.camel</groupId>
-            <artifactId>kafka-tester-common</artifactId>
+            <artifactId>camel-load-tester-common</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
 
     <modules>
-        <module>kafka-tester-consumer</module>
-        <module>kafka-tester-producer</module>
-        <module>kafka-tester-analyzer</module>
+        <module>camel-load-tester-consumer</module>
+        <module>camel-load-tester-producer</module>
+        <module>camel-load-tester-analyzer</module>
     </modules>
 
     <profiles>
