--- a/controllers/controller-cli/pom.xml
+++ b/controllers/controller-cli/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>controller-cli</artifactId>
+    <name>Controller :: CLI</name>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
