--- a/pom.xml
+++ b/pom.xml
@@ -208,90 +208,12 @@
       </dependencies>
     </profile>
     <profile>
-      <id>camel-4.0.0-M1</id>
+      <id>camel-4.0</id>
       <activation>
         <activeByDefault>false</activeByDefault>
       </activation>
       <properties>
-        <camel.version>4.0.0-M1</camel.version>
-        <log4j2-version>2.19.0</log4j2-version>
-        <slf4j-version>2.0.6</slf4j-version>
-      </properties>
-
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-slf4j2-impl</artifactId>
-          <scope>runtime</scope>
-          <version>${log4j2-version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-core</artifactId>
-          <scope>runtime</scope>
-          <version>${log4j2-version}</version>
-        </dependency>
-      </dependencies>
-    </profile>
-    <profile>
-      <id>camel-4.0.0-M2</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
-      <properties>
-        <camel.version>4.0.0-M2</camel.version>
-        <log4j2-version>2.19.0</log4j2-version>
-        <slf4j-version>2.0.6</slf4j-version>
-      </properties>
-
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-slf4j2-impl</artifactId>
-          <scope>runtime</scope>
-          <version>${log4j2-version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-core</artifactId>
-          <scope>runtime</scope>
-          <version>${log4j2-version}</version>
-        </dependency>
-      </dependencies>
-    </profile>
-    <profile>
-      <id>camel-4.0.0-M3</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
-      <properties>
-        <camel.version>4.0.0-M3</camel.version>
-        <log4j2-version>2.20.0</log4j2-version>
-        <slf4j-version>2.0.6</slf4j-version>
-      </properties>
-
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-slf4j2-impl</artifactId>
-          <scope>runtime</scope>
-          <version>${log4j2-version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-core</artifactId>
-          <scope>runtime</scope>
-          <version>${log4j2-version}</version>
-        </dependency>
-      </dependencies>
-    </profile>
-    <profile>
-      <id>camel-4.0.0-RC2</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
-      <properties>
-        <camel.version>4.0.0-RC2</camel.version>
+        <camel.version>4.0.0</camel.version>
         <log4j2-version>2.20.0</log4j2-version>
         <slf4j-version>2.0.7</slf4j-version>
       </properties>
@@ -312,12 +234,12 @@
       </dependencies>
     </profile>
     <profile>
-      <id>camel-4.0</id>
+      <id>camel-4.1</id>
       <activation>
         <activeByDefault>false</activeByDefault>
       </activation>
       <properties>
-        <camel.version>4.0.0-SNAPSHOT</camel.version>
+        <camel.version>4.1.0-SNAPSHOT</camel.version>
         <log4j2-version>2.20.0</log4j2-version>
         <slf4j-version>2.0.7</slf4j-version>
       </properties>
