Cleanup the logs
Rework the log so that the files are created on a directory passed on the command line

--- a/camel-load-testers/camel-load-tester-producer/src/main/resources/log4j2.properties
+++ b/camel-load-testers/camel-load-tester-producer/src/main/resources/log4j2.properties
@@ -1,21 +1,20 @@
-
-# Single file
-#appender.out.type = File
-#appender.out.name = file
-#appender.out.fileName = logs/test.log
-#appender.out.layout.type = PatternLayout
-#appender.out.layout.pattern = [%30.30t] %-30.30c{1} %-5p %m%n
-
 appender.rolling-out.type = RollingFile
 appender.rolling-out.name = rolling-out
-appender.rolling-out.fileName = logs/camel-kafka-test.log
-appender.rolling-out.filePattern = logs/camel-kafka-test-%d{yyyyMMdd-HHmmss}.log
+appender.rolling-out.fileName = ${sys:log.dir}/camel-load-tester.log
+appender.rolling-out.filePattern = ${sys:log.dir}/camel-load-tester-%d{yyyyMMdd-HHmmss}.log
 appender.rolling-out.layout.type = PatternLayout
 # This logs the thread name and so on, but it's usually not helpful
 #appender.rolling-out.layout.pattern = [%30.30t] %-30.30c{1} %-5p %m%n
 appender.rolling-out.layout.pattern = %d{DEFAULT} [%-5p] %m%n
 appender.rolling-out.policies.type = Policies
 appender.rolling-out.policies.size.type = OnStartupTriggeringPolicy
+
+
+appender.metrics.type = File
+appender.metrics.name = metrics
+appender.metrics.fileName = ${sys:log.dir}/${sys:log.test.name}.log
+appender.metrics.layout.type = PatternLayout
+appender.metrics.layout.pattern = %d{DEFAULT} [%-5p] %m%n
 
 # For console
 appender.console.type = Console
@@ -39,18 +38,20 @@ logger.camel-throughput.name = org.apache.camel.support.processor.ThroughputLogg
 logger.camel-throughput.level = INFO
 logger.camel-throughput.additivity = false
 logger.camel-throughput.appenderRef.file.ref = rolling-out
+logger.camel-throughput.appenderRef.metrics.ref = metrics
 logger.camel-throughput.appenderRef.console.ref = console
 
 logger.camel.name = org.apache.camel
-logger.camel.level = WARN
+logger.camel.level = DEBUG
 logger.camel.additivity = false
 logger.camel.appenderRef.file.ref = rolling-out
 
 logger.tester.name = org.apache.camel.kafka.tester
-logger.tester.level = INFO
+logger.tester.level = DEBUG
 logger.tester.additivity = false
 logger.tester.appenderRef.file.ref = rolling-out
-logger.tester.appenderRef.console.ref = console
+logger.tester.appenderRef.metrics.ref = metrics
+ logger.tester.appenderRef.console.ref = console
 
 logger.kafka.name = org.apache.kafka
 logger.kafka.level = INFO
@@ -59,4 +60,5 @@ logger.kafka.appenderRef.file.ref = rolling-out
 
 rootLogger.level = INFO
 rootLogger.appenderRef.file.ref = rolling-out
+rootLogger.appenderRef.metrics.ref = metrics
 rootLogger.appenderRef.out.ref = console
