Revert Camel log level to WARN after debug session

--- a/camel-load-testers/camel-load-tester-producer/src/main/resources/log4j2.properties
+++ b/camel-load-testers/camel-load-tester-producer/src/main/resources/log4j2.properties
@@ -42,12 +42,12 @@ logger.camel-throughput.appenderRef.metrics.ref = metrics
 logger.camel-throughput.appenderRef.console.ref = console
 
 logger.camel.name = org.apache.camel
-logger.camel.level = DEBUG
+logger.camel.level = WARN
 logger.camel.additivity = false
 logger.camel.appenderRef.file.ref = rolling-out
 
 logger.tester.name = org.apache.camel.load
-logger.tester.level = DEBUG
+logger.tester.level = INFO
 logger.tester.additivity = false
 logger.tester.appenderRef.file.ref = rolling-out
 logger.tester.appenderRef.metrics.ref = metrics
