--- a/pom.xml
+++ b/pom.xml
@@ -177,7 +177,8 @@
         <activeByDefault>false</activeByDefault>
       </activation>
       <properties>
-        <camel.version>3.20.6</camel.version>
+        <!-- Currently using snapshot due to CAMEL-19759 -->
+        <camel.version>3.20.7-SNAPSHOT</camel.version>
         <log4j2-version>2.18.0</log4j2-version>
       </properties>
       <dependencies>
@@ -195,7 +196,8 @@
         <activeByDefault>false</activeByDefault>
       </activation>
       <properties>
-        <camel.version>3.21.0</camel.version>
+        <!-- Currently using snapshot due to CAMEL-19759 -->
+        <camel.version>3.21.1-SNAPSHOT</camel.version>
         <log4j2-version>2.18.0</log4j2-version>
       </properties>
       <dependencies>
