Add a logger for the main package

--- a/camel-load-testers/camel-load-tester-producer/src/main/resources/log4j2.properties
+++ b/camel-load-testers/camel-load-tester-producer/src/main/resources/log4j2.properties
@@ -29,6 +29,13 @@ logger.camel-kafka.level = INFO
 logger.camel-kafka.additivity = false
 logger.camel-kafka.appenderRef.file.ref = rolling-out
 
+
+logger.camel-main.name = org.apache.camel.main
+logger.camel-main.level = INFO
+logger.camel-main.additivity = false
+logger.camel-main.appenderRef.file.ref = rolling-out
+
+
 logger.camel-dataset.name = org.apache.camel.component.dataset
 logger.camel-dataset.level = INFO
 logger.camel-dataset.additivity = false
