--- a/pom.xml
+++ b/pom.xml
@@ -195,8 +195,7 @@
         <activeByDefault>false</activeByDefault>
       </activation>
       <properties>
-        <!-- Currently using snapshot due to CAMEL-19759 -->
-        <camel.version>3.21.1-SNAPSHOT</camel.version>
+        <camel.version>3.21.1</camel.version>
         <log4j2-version>2.18.0</log4j2-version>
       </properties>
       <dependencies>
