--- a/camel-load-testers/pom.xml
+++ b/camel-load-testers/pom.xml
@@ -54,6 +54,10 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-jackson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-datasonnet</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.camel</groupId>
