--- a/camel-load-testers/camel-load-tester-analyzer/pom.xml
+++ b/camel-load-testers/camel-load-tester-analyzer/pom.xml
@@ -12,6 +12,10 @@
     <artifactId>camel-load-tester-analyzer</artifactId>
     <name>Camel Load Tester :: Analyzer</name>
 
+    <properties>
+        <clt.main.class>org.apache.camel.load.analyzer.MainAnalyzer</clt.main.class>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.knowm.xchart</groupId>
@@ -39,34 +43,12 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.camel</groupId>
+                <artifactId>camel-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.4</version>
-                <executions>
-                    <execution>
-                        <id>share-analyzer</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.apache.camel.load.analyzer.MainAnalyzer</mainClass>
-                                    <manifestEntries>
-                                        <Multi-Release>true</Multi-Release>
-                                    </manifestEntries>
-                                </transformer>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                                    <resource>META-INF/services/org/apache/camel/TypeConverterLoader</resource>
-                                </transformer>
-                            </transformers>
-                            <shadedArtifactAttached>true</shadedArtifactAttached>
-                            <shadedClassifierName>executable-jar</shadedClassifierName>
-                            <finalName>${project.artifactId}-${camel.version}</finalName>
-                        </configuration>
-                    </execution>
-                </executions>
+                <artifactId>maven-assembly-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
