--- a/camel-load-testers/camel-load-tester-consumers/camel-load-tester-consumer-kafka/pom.xml
+++ b/camel-load-testers/camel-load-tester-consumers/camel-load-tester-consumer-kafka/pom.xml
@@ -19,6 +19,18 @@
 
   <name>Camel Load Tester :: Consumer :: Kafka</name>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-kafka</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-jackson</artifactId>
+    </dependency>
+  </dependencies>
+
   <build>
     <plugins>
       <plugin>
