--- a/camel-load-testers/camel-load-tester-consumers/pom.xml
+++ b/camel-load-testers/camel-load-tester-consumers/pom.xml
@@ -14,6 +14,7 @@
 
     <modules>
         <module>camel-load-tester-consumer-kafka</module>
+        <module>camel-load-tester-consumer-platform-http-vertx</module>
     </modules>
 
 </project>
