--- a/pom.xml
+++ b/pom.xml
@@ -390,6 +390,32 @@
         </dependency>
       </dependencies>
     </profile>
+    <profile>
+      <id>camel-4.7</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <properties>
+        <camel.version>4.7.0-SNAPSHOT</camel.version>
+        <log4j2-version>2.21.1</log4j2-version>
+        <slf4j-version>2.0.13</slf4j-version>
+      </properties>
+
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-slf4j2-impl</artifactId>
+          <scope>runtime</scope>
+          <version>${log4j2-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-core</artifactId>
+          <scope>runtime</scope>
+          <version>${log4j2-version}</version>
+        </dependency>
+      </dependencies>
+    </profile>
   </profiles>
 
   <modules>
